That's as much as I can do

--- a/index.html
+++ b/index.html
@@ -50,5 +50,105 @@
             <div class="social-circle"></div>
         </div>
     </section>
+
+    <!-- features left -->
+    <section id="features-left">
+        <section id="features-left-1">
+            <h1>Feature that is amazing</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius quos rem aspernatur molestias eos officiis, autem nesciunt inventore est velit, dolorum aliquam numquam reiciendis, error eaque quo minima labore consectetur?</p>
+            <div>
+                <button>Learn More</button>
+            </div>
+        </section>
+        <section id="features-left-2">
+            <div></div>
+        </section>
+    </section>
+
+    <!-- CTA -->
+
+    <section id="CTA">
+        <div id="cta-container">
+            <h1>Ready to get started?</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, officia aliquid! Sunt ducimus nobis maxime harum, similique at dicta quod nostrum, atque nemo, officia dolorem incidunt id ex vero fugit.</p>
+            <button>Start free trial</button>
+        </div>
+    </section>
+
+    <!-- Transparent pricing  -->
+    <section id="pricing">
+        <nav>
+            <h1>Transparent Pricing</h1>
+            <p>"If you don't try this app, you won't become the superher you were mean to be"</p>
+        </nav>
+        <div class="card">
+            <div id="circle"></div>
+            <h1>Title</h1>
+            <h3>Subtitle</h3>
+            <ul>
+                <li>Feature 1</li>
+                <li>Feature 2</li>
+                <li>Feature 3</li>
+            </ul>
+            <button>Start now</button>
+        </div>
+        <div class="card">
+            <div id="circle"></div>
+            <h1>Title</h1>
+            <h3>Subtitle</h3>
+            <ul>
+                <li>Feature 1</li>
+                <li>Feature 2</li>
+                <li>Feature 3</li>
+            </ul>
+            <button>Start now</button>
+        </div>
+        <div class="card">
+            <div id="circle"></div>
+            <h1>Title</h1>
+            <h3>Subtitle</h3>
+            <ul>
+                <li>Feature 1</li>
+                <li>Feature 2</li>
+                <li>Feature 3</li>
+            </ul>
+            <button>Start now</button>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <div id="left-box">
+            <h1>Trade</h1>
+            <p>&copy; 2010 - 2020</p>
+            <p>Privacy - Terms</p>
+        </div>
+        <div id="right-box">
+            <div>
+                <h3>Product</h3>
+                <p>Product</p>
+                <p>Product</p>
+                <p>Product</p>
+            </div>
+            <div>
+                <h3>Features</h3>
+                <p>Feature</p>
+                <p>Feature</p>
+                <p>Feature</p>
+            </div>
+            <div>
+                <h3>Resources</h3>
+                <p>Resource</p>
+                <p>Resource</p>
+                <p>Resource</p>
+            </div>
+            <div>
+                <h3>Company</h3>
+                <p>Company</p>
+                <p>Company</p>
+                <p>Company</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
